# GGUI

./: .dockerignore  .gitignore  Bmp_Loader.h  Constants.h  GGUI_Unix.lib  GGUI_Win.lib  LICENSE  README.md  Renderer.cpp  Renderer.h  Vulkan.cpp  Vulkan.h  Vulkan_API.h  Window.cpp  Window.h  ggui.h  main.cpp  meson.build  vert.spv
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  nightly.yml
Core/: Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  Thread.cpp  Thread.h  ggui.h  main.cpp
Core/Addons/: Addons.cpp  Addons.h
Core/SIMD/: SIMD.h
Core/Utils/: Color.cpp  Color.h  Constants.cpp  Constants.h  Event.h  Guard.h  Logger.cpp  Logger.h  No_Inline.cpp  Style.cpp  Style.h  Super_String.h  Units.h  Utils.cpp  Utils.h
Elements/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  Element.cpp  Element.h  File_Streamer.cpp  File_Streamer.h  HTML.cpp  HTML.h  List_View.cpp  List_View.h  Progress_Bar.cpp  Progress_Bar.h  Switch.cpp  Switch.h  Text_Field.cpp  Text_Field.h  Window.cpp  Window.h
Examples/: Canvas_Example.cpp  Demo_Example.cpp  Error_Example.cpp  Hello_World.cpp  Inspect_Tool_Example.cpp  List_View_Exa,ple.cpp  List_View_Example.cpp  Multi_Page_Example.cpp  Opacity_Example.cpp  Outbox_Example.cpp  Progress_Bar_Example.cpp  Scroll_View_Example.cpp  Text_Field_Example.cpp  Window_Example.cpp  simple.html
Export/: Build_GGUI_Lib.cpp  Export_Git.cpp  Export_Git.sh  GGUI.h  GGUI_Body.cpp  README.md  python_test.py
SIMD/: SIMD.h
Shaders/: frag.frag  frag.spv  vert.spv  vert.vert
Versions/: Get_Commit_Log.sh  version_0.1.7.5.md
examples/: Canvas_Example.cpp  Demo_Example.cpp  Error_Example.cpp  Inspect_Tool_Example.cpp  Multi_Page_Example.cpp  Opacity_Example.cpp  Progress_Bar_Example.cpp  README.md  Scroll_View_Example.cpp  Text_Field_Example.cpp  simple.html
examples/large/: Multi_Page_Example.cpp  multiPageExample.cpp
examples/medium/: Demo_Example.cpp  Error_Example.cpp  demoExample.cpp  errorExample.cpp
examples/small/: Canvas_Example.cpp  Opacity_Example.cpp  Progress_Bar_Example.cpp  Scroll_View_Example.cpp  argParsing.cpp  buttonExample.cpp  canvasExample.cpp  listViewExample.cpp  opacityExample.cpp  progressBarExample.cpp  scrollViewExample.cpp  switchExample.cpp  textFieldExample.cpp
include/: Build_GGUI_To_LIB.cpp  Build_Script.cpp  GGUI.h  GGUI_Body.cpp
src/: ggui.h  main.cpp
src/Core/: Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  Thread.cpp  Thread.h
src/Elements/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  (+16 more)
test/: run.sh  tester.cpp
(+98 files in other folders)
